# hip-performance-optimization-on-gfx1032

./: LICENSE  README.md
cuda/: CMakeLists.txt  const.h  hipify-all.sh  test-02-01.cu  utils.h
src/: CMakeLists.txt  test-02-01.hip  utils.h
